--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -97,8 +97,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true")#maquinasModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
-                                //- .modal-content-close
-                                //-     button(type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close")
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     p.modal-title#exampleModalLabel CUARTO DE MAQUINAS
                                 .modal-content-body
@@ -118,6 +119,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true")#hollinModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
                                     p.modal-title#exampleModalLabel INSTALACIÓN DE COLECTOR DE HOLLÍN
@@ -149,6 +153,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true")#mttoModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO
                                 .modal-content-body
@@ -199,6 +206,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true")#conversionModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
                                     p.modal-title#exampleModalLabel CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL
@@ -231,6 +241,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true")#quemadoresModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
                                     p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO
@@ -258,6 +271,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true")#testoModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
                                     p.modal-title#exampleModalLabel CARBURACIÓN
@@ -279,6 +295,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true")#cursosModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
                                     p.modal-title#exampleModalLabel CURSO DE CALDERAS
@@ -300,6 +319,9 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true")#adicionalesModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                .modal-content-close
+                                    a(data-bs-dismiss="modal" aria-label="Close")
+                                        img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
                                     p.modal-title#exampleModalLabel EMERGENCIAS
