--- a/css/style.less
+++ b/css/style.less
@@ -701,12 +701,16 @@
           .modal{
             &-content{
               &-close{
-                button{
-                  position: absolute;
-                  font-size: 2rem;
-                  margin: 0;
-                  right: 5px;
-                  width: auto;
+                position: relative;
+                a{
+                  img{
+                    position: absolute;
+                    margin: 10px 7px;
+                    right: 5px;
+                    width: 20px;
+                  }
+                 
+
                 }
               }
               &-header{
