Se corrigen los enlaces del footer

--- a/components/footer.pug
+++ b/components/footer.pug
@@ -27,19 +27,19 @@ footer
             .footer__box__body-links
                 ul 
                     li
-                        a(href="/") INICIO
+                        a(href="index.html") INICIO
                     li
-                        a(href="/html/empresa.html") ¿QUIÉNES SOMOS? 
+                        a(href="empresa.html") ¿QUIÉNES SOMOS? 
                     li
-                        a(href="/html/servicios.html") SERVICIOS
+                        a(href="servicios.html") SERVICIOS
                     li
-                        a(href="/html/productos.html") PRODUCTOS
+                        a(href="productos.html") PRODUCTOS
                     li
-                        a(href="/html/calderas.html") CALDERAS
+                        a(href="calderas.html") CALDERAS
                     li
-                        a(href="/html/contacto.html") CONTACTO
+                        a(href="contacto.html") CONTACTO
                     li
-                        a(href="/html/privacidad.html") POLÍTICA DE PRIVACIDAD 
+                        a(href="privacidad.html") POLÍTICA DE PRIVACIDAD 
             .footer__box__body-address 
                 h2 DIRECCIÓN
                 img(src="images/SVG/address.svg", alt="ícono de ubicación")
