--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,10 @@
 @import "./globals.less";
 @import "./variables.less";
+.accordion-button::after{
+  width: 2rem !important;
+  height: 2rem !important;
+  background-size: 2rem !important;
+}
 .ir-arriba{
   display:none;
 	padding:5px;
