--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -40,6 +40,10 @@ block content
                         img(src="images/FotosServicios/8.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9")
                         img(src="images/FotosServicios/9.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10")
+                        img(src="images/FotosServicios/10.jpg").d-block.w-100.img-fluid
+                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11")
+                        img(src="images/FotosServicios/11.jpg").d-block.w-100.img-fluid
                 .carousel-inner 
                     .carousel-item.active
                         img(src="images/FotosServicios/1.jpg").d-block.w-100
@@ -59,6 +63,10 @@ block content
                         img(src="images/FotosServicios/8.jpg").d-block.w-100
                     .carousel-item 
                         img(src="images/FotosServicios/9.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/10.jpg").d-block.w-100
+                    .carousel-item 
+                        img(src="images/FotosServicios/11.jpg").d-block.w-100
                 button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev").carousel-control-prev
                     span(aria-hidden="true").carousel-control-prev-icon
                     span.visually-hidden Previous
