Se hacen los últimos cambios solicitados por Sandra, bajar el botón ddel slide 30 años, se hace mas grande la letra de un parrafo de servicios. También se agrega el favicon

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ body {
   padding: 10px 30px;
   border-radius: 10px;
   position: absolute;
-  bottom: 26px;
+  bottom: 43px;
   width: 180px;
 }
 .index .carousel-inner .carousel-item .slide2__Content {
@@ -928,6 +928,7 @@ body {
 }
 .servicios__periodico p strong {
   font-weight: 600;
+  font-size: 2.6rem;
 }
 .servicios__catalogo__items {
   display: -ms-grid;
