--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -109,7 +109,7 @@ block content
                                     a(data-bs-dismiss="modal" aria-label="Close")
                                         img(src="/images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
-                                    p.modal-title#exampleModalLabel CUARTO DE MAQUINAS
+                                    p.modal-title#exampleModalLabel CUARTO DE MÁQUINAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images 
