--- a/css/style.less
+++ b/css/style.less
@@ -202,7 +202,7 @@
               padding: 10px 30px;
               border-radius: 10px;
               position: absolute;
-              bottom: 26px;
+              bottom: 43px;
               width: 180px;
             }
           }
@@ -670,6 +670,7 @@
         line-height: 3.2rem;
         strong{
           font-weight: @font-semibold;
+          font-size: 2.6rem;
         }
       }
     }
