--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,8 @@ body {
   line-height: 4rem;
 }
 .index .carousel-inner .carousel-item .slideB__Content__box p strong {
-  font-weight: 800;
+  font-weight: 600;
+  font-size: 4rem;
 }
 .index .carousel-inner .carousel-item .slideB__Content__box .slideB_logoCleaver {
   margin: 10px 50px;
@@ -554,6 +555,7 @@ body {
   top: 0;
   margin: 0px 10px 0px 5px;
   text-align: center;
+  height: 100%;
 }
 .index__area__acerca .title {
   width: 90%;
