--- a/css/style.less
+++ b/css/style.less
@@ -141,7 +141,8 @@
               margin: 0px 50px;
               line-height: 4rem;
               strong{
-                font-weight: @font-bold;
+                font-weight: @font-semibold;
+                font-size: 4rem;
               }
 
    
@@ -364,6 +365,7 @@
           top: 0;
           margin: 0px 10px 0px 5px;
           text-align: center;
+          height: 100%;
          }
      }
      &__area{
