Se cambian las palabras de productos de plural a singular

--- a/pug/productos.pug
+++ b/pug/productos.pug
@@ -130,7 +130,7 @@ block content
                                 .accordion-body__box-img
                                     img(src="images/Products/Electrodos.jpg").accordion-body__box__img.img-fluid
                                 .accordion-body__box-txt
-                                    p Electrodos
+                                    p Electrodo
                             .accordion-body__box
                                 .accordion-body__box-img
                                     img(src="images/Products/Transformador.jpg").accordion-body__box__img.img-fluid
@@ -150,12 +150,12 @@ block content
                                 .accordion-body__box-img
                                     img(src="images/Products/Manometro.jpg").accordion-body__box__img.img-fluid
                                 .accordion-body__box-txt
-                                    p Manómetros
+                                    p Manómetro
                             .accordion-body__box
                                 .accordion-body__box-img
                                     img(src="images/Products/termometroRochester600x600.jpg").accordion-body__box__img.img-fluid
                                 .accordion-body__box-txt
-                                    p Termómetros  
+                                    p Termómetro  
                 .acccordion-item
                     h2.accordion-header#panelsStayOpen-headingEight
                         button(type="button" data-bs-toggle="collapse" data-bs-target="#panelMirillas" aria-expanded="true" aria-controls="panelMirillas").accordion-button.collapsed MIRILLAS
