--- a/css/style.css
+++ b/css/style.css
@@ -968,8 +968,8 @@ body {
 }
 .servicios__catalogo__items-item .modal-content-close a img {
   position: absolute;
-  margin: 10px 7px;
-  right: 5px;
+  margin: 3px;
+  right: 3px;
   width: 20px;
 }
 .servicios__catalogo__items-item .modal-content-header {
