--- a/css/style.less
+++ b/css/style.less
@@ -710,8 +710,8 @@
                 a{
                   img{
                     position: absolute;
-                    margin: 10px 7px;
-                    right: 5px;
+                    margin: 3px;
+                    right: 3px;
                     width: 20px;
                   }
                  
