Se corrige el formulario, se cambia de cuenta

--- a/pug/contacto.pug
+++ b/pug/contacto.pug
@@ -17,9 +17,8 @@ block content
                 iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14806.615195345765!2d-102.2899575074242!3d21.9094033695804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8429ee48fd3d8823%3A0x8ce100b4fccc2b41!2sCto.%20Lacustre%20309%2C%20Villas%20del%20Cobano%2C%2020158%20Aguascalientes%2C%20Ags.!5e0!3m2!1ses-419!2smx!4v1649863573603!5m2!1ses-419!2smx" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade")
 
             .contacto__form 
-                form(action="https://formspree.io/f/meqndqgv" method="POST").form#my-form
+                form(action="https://formspree.io/f/xwkyglnr" method="POST").form#my-form
                   action=""
-  
                     .form__container 
                         h2.form__title CONTÁCTENOS 
                         input(type='text' placeholder="Nombre").form__container__input
