--- a/components/template.html
+++ b/components/template.html
@@ -110,5 +110,6 @@
     </footer>
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
+    <script src="js/limpiar.js"></script>
   </body>
 </html>
