--- a/css/style.css
+++ b/css/style.css
@@ -967,11 +967,12 @@ body {
       justify-self: center;
 }
 .servicios__catalogo__items-item .modal-content-close {
+  height: 35px;
   position: relative;
 }
 .servicios__catalogo__items-item .modal-content-close a img {
   position: absolute;
-  margin: 3px;
+  margin: 15px;
   right: 3px;
   width: 20px;
 }
