--- a/css/style.less
+++ b/css/style.less
@@ -709,11 +709,12 @@
           .modal{
             &-content{
               &-close{
+                height: 35px;
                 position: relative;
                 a{
                   img{
                     position: absolute;
-                    margin: 3px;
+                    margin: 15px;
                     right: 3px;
                     width: 20px;
                   }
