se corrigen lo botones delos slides en los tamaños micro

--- a/css/style.css
+++ b/css/style.css
@@ -1477,3 +1477,11 @@ footer .footer__foot .rights p {
   text-align: center;
   margin: 0;
 }
+@media (max-width: 400px) {
+  .index .carousel-inner .carousel-item .slide2__Content__box {
+    top: 0;
+  }
+  .index .carousel-inner .carousel-item .slide2__Content__box-line4 {
+    margin-bottom: 6px;
+  }
+}
