--- a/css/style.less
+++ b/css/style.less
@@ -1195,3 +1195,17 @@
     }
     
   }
+  @media (max-width: 400px){
+    .index{
+      .carousel-inner{
+        .carousel-item{
+          .slide2__Content__box{
+            top: 0;
+            &-line4{
+              margin-bottom: 6px;
+            }
+          }
+        }
+      }
+    }
+  }
