Se corrigen los errores en la versión micro

--- a/css/style.less
+++ b/css/style.less
@@ -1200,11 +1200,55 @@
       .carousel-inner{
         .carousel-item{
           .slide2__Content__box{
-            top: 0;
+            top: 0; 
             &-line4{
               margin-bottom: 6px;
             }
           }
+        }
+     
+      }
+      &__area{
+        &__experiencia{
+          &-txt{
+            p{
+              margin: 15px 30px;
+            }
+          }
+        }
+        &__elegirnos{
+          &__items{
+            &-item{
+              p{
+                font-size: 1.8rem;
+              }
+            }
+          }
+        }
+      }
+    }
+    .empresa{
+      &__content{
+        &-historia{
+          p{
+            padding: 5px 30px;
+          }
+        }
+
+      }
+      &__content{
+        &__mvv{
+          &-box{
+            height: 710px;
+          }
+        }
+      }
+    }
+    .productos{
+      &__catalogo{
+        .accordion-body__box{
+          border-radius: 15px !important;
+         
         }
       }
     }
