--- a/pug/contacto.pug
+++ b/pug/contacto.pug
@@ -27,7 +27,7 @@ block content
                         input(type='submit' value='Enviar').form__container__cta
         .contacto__convencer
             picture
-                source(media="(min-width:1110px)" srcset="images/JPG/bannerContacto1920x600.jpg")
-                source(media="(min-width:768px)" srcset="images/JPG/bannerContacto834x537.jpg")
+                source(media="(min-width:1110px)" srcset="/images/PNG/fondoContactenos-left-Desk.png")
+                source(media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png")
                 img(src="images/PNG/fondoContactenos2.png", alt="Ingeniero con casco").img-fluid
             p Contáctenos y déjese convencer por nuestra amplia experiencia.
