--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -2,27 +2,27 @@ p.title MARCAS
 .carousel.slide.carousel__mobile(data-bs-ride="carousel")#carouselExampleControls
     .carousel-inner
         .carousel-item.active
-            img(src="images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ALLANSON.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/ASCO.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ASCO.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/METRON.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/METRON.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/PICSA.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/PICSA.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/SENTINEL.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/VIKING-PUMP.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VIKING-PUMP.jpg").d-block.w-100
         button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
@@ -30,28 +30,22 @@ p.title MARCAS
             span(aria-hidden="true").carousel-control-next-icon
             span.visually-hidden Next
 
-.carousel.slide.carousel__tablet(data-bs-ride="carousel")#carouselExampleControls
+.carousel.slide.carousel__tablet.carousel-fade(data-bs-ride="carusel")#carouselExampleControls1
     .carousel-inner
         .carousel-item.active
-            img(src="images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/ASCO.png").d-block.w-100.img-fluid
-            img(src="images/Marcas/BELL-&-GOSSET.jpg").d-block.w-100.img-fluid
+            img(src="images/carousel/1.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
+            img(src="images/carousel/2.jpg").d-block.w-100
+        .carousel-item 
+            img(src="images/carousel/3.jpg").d-block.w-100
         .carousel-item
-            img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/METRON.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/PICSA.jpg").d-block.w-100.img-fluid     
-        .carousel-item
-            img(src="images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/VIKING-PUMP.jpg").d-block.w-100.img-fluid
-        button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
+            img(src="images/carousel/4.jpg").d-block.w-100
+        .carousel-item        
+            img(src="images/carousel/5.jpg").d-block.w-100     
+        button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
-        button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next").carousel-control-next
+        button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next").carousel-control-next
             span(aria-hidden="true").carousel-control-next-icon
             span.visually-hidden Next
 
