--- a/css/tablet.less
+++ b/css/tablet.less
@@ -21,6 +21,8 @@
     display:none !important;
 }
 .carousel__tablet{
+    border-top: 2px solid @color-primary;
+    border-bottom: 2px solid @color-primary;
     display: inline;
     .carousel-inner{
         .carousel-item{
