Se aplican los saltos de linea solicitados por Sandra en la sección de servivios

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -99,7 +99,7 @@ block content
                 //- ITEM SERVICIOS
                 .servicios__catalogo__items-item
                     img(src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg", alt="").img-fluid
-                    p DISEÑO DE CUARTO DE MÁQUINAS
+                    p DISEÑO DE CUARTO <br>DE MÁQUINAS
                     button(type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true")#maquinasModal
@@ -208,7 +208,7 @@ block content
                 
                 .servicios__catalogo__items-item
                     img(src="images/serviciosMobile/conversionCalderas500x458.jpg").img-fluid
-                    p CONVERSIÓN DE COMBUSTIBLES A CALDERAS
+                    p CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS
                     button(type="button" data-bs-toggle="modal" data-bs-target="#conversionModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true")#conversionModal
@@ -297,7 +297,7 @@ block content
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 .servicios__catalogo__items-item
                     img(src="images/serviciosMobile/cursos500x458.jpg", alt="").img-fluid
-                    p CURSO BÁSICO DE OPERACIÓN A CALDERAS
+                    p CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS
                     button(type="button" data-bs-toggle="modal" data-bs-target="#cursosModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true")#cursosModal
