Se corriglen los slides de las marcas, carousel en la versión de tablet

--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -30,7 +30,7 @@ p.title MARCAS
             span(aria-hidden="true").carousel-control-next-icon
             span.visually-hidden Next
 
-.carousel.slide.carousel__tablet.carousel-fade(data-bs-ride="carusel")#carouselExampleControls1
+.carousel.slide.carousel__tablet(data-bs-ride="carousel")#carouselExampleControls1
     .carousel-inner
         .carousel-item.active
             img(src="images/carousel/1.jpg").d-block.w-100
@@ -48,6 +48,6 @@ p.title MARCAS
         button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next").carousel-control-next
             span(aria-hidden="true").carousel-control-next-icon
             span.visually-hidden Next
-
+            
 .marcas__propiedad 
     p *Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, #[br]#[strong SERVICIO TÉCNICO A CALDERAS]#[br] los utiliza con fines informativos e ilustrativos.
