Se aplican los saltos de línea a los titulos de los modales, por solicitud de Sandra

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -109,7 +109,7 @@ block content
                                     a(data-bs-dismiss="modal" aria-label="Close")
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
-                                    p.modal-title#exampleModalLabel DISEÑO DE CUARTO DE MÁQUINAS
+                                    p.modal-title#exampleModalLabel DISEÑO DE CUARTO <br>DE MÁQUINAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images 
@@ -219,7 +219,7 @@ block content
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel CONVERSIÓN DE COMBUSTIBLES A CALDERAS
+                                    p.modal-title#exampleModalLabel CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images
@@ -308,7 +308,7 @@ block content
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel CURSO BÁSICO DE OPERACIÓN A CALDERAS
+                                    p.modal-title#exampleModalLabel CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                    
