--- a/pug/index.pug
+++ b/pug/index.pug
@@ -13,14 +13,14 @@ block content
                             img(src="images/SVG/logoSertec.svg").img-fluid.slideA_logo
                             p DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR
                             img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoTermiz
-                .carousel-item
+                .carousel-item.active
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
                         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
                         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slideB__Content 
                         .slideB__Content__box
-                            p SOMOS #[strong ESPECIALISTAS EN CALDERAS]
+                            p SOMOS #[br]#[strong ESPECIALISTAS EN CALDERAS]
                             img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
                             a(href="contacto.html").slideB__Content__box-cta Contáctenos
                 .carousel-item
